<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_server_number">

            <TextView
                android:text="@string/settings_server_num_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                style="@style/editText"
                android:hint="@string/settings_server_num"
                android:inputType="number"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_username_summary" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_username_hint"
                android:imeOptions="actionNext" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_password_summary"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:hint="@string/settings_password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_pin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_pin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:imeOptions="actionDone"
                android:hint="@string/settings_pin_hint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/settings_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_check"
            android:layout_marginTop="10dp" />

        <TextView
            style="@style/editText"
            android:text="@string/settings_check_summary"/>

        <View
            android:layout_width="fill_parent"
            android:background="#FF909090"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_height="1px" />

        <Button
            android:text="@string/settings_add_server_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="addContact"
            android:textSize="14sp"
            android:background="#efefef" />

    </LinearLayout>
</ScrollView>