<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_pin_explanation"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_pin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_pin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:hint="@string/settings_pin_hint"
                android:maxLength="4"
                android:imeOptions="actionDone" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:layout_weight="0.5"
                android:text="@string/settings_goback_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_back"/>
            <Button
                android:layout_weight="0.5"
                android:text="@string/settings_verifypin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_verify"
                android:textColor="#0066ff"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:background="#FF909090"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_height="1px" />

        <Button
            android:text="@string/settings_reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_reset"
            android:textSize="14sp"
            android:background="#efefef" />

    </LinearLayout>
</ScrollView>