<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0066ff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/app_name_long_subtitled"/>

        <ImageView
            android:layout_width="122dp"
            android:layout_height="122dp"
            android:src="@mipmap/armory"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/introduction"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_progress"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:enabled="false"
            android:id="@+id/btn_start_reporting"
            android:onClick="startReporting"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_reset"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/reset_values_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btn_reset_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:textColor="@android:color/white"
            android:text="@string/reset_values_button"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>